[package]
name = "rstorial"
version = "0.1.0"
authors = ["Hitomaru Horino <type10tk@kahi-sv.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4.0"
env_logger = "0.8.3"
